# dotfiles

./: .commit.sh  .default-npm-packages  .env  .env.example  .gitconfig  .gitignore  .gitignore_global  .gitmodules  .hyper.js  .mcp.json  .mcp.max.json  .profile  .tigrc  .tmux.conf  .tmux.session.conf  .vimrc  CLAUDE.md  README.md  cli-config.json  create-symlinks.sh  init-asdf.sh  init-nodejs.sh  init-ssh.sh  install.sh  intel.sh  m1.sh  package.json  setup.sh
.claude/: CLAUDE.md  settings.json
.claude/agents/: claudex-gpt.md  claudex-grok.md  claudex-orchestrator.md  claudex-sonnet.md  custom-advisor.md  custom-subagent-creator.md  custom-subagent.md
.claude/commands/: agmsg.md  git-commit-by-feature.md
.codeium/windsurf/: global_workflows
.codex/: config.toml  hooks.json  version.json
.config/claudex/: README.md  providers.json
.config/direnv/: direnvrc
.config/fish/: aliases.fish  binds.fish  config.fish  envs.fish  fish_variables  intel.fish  m1.fish  path.fish
.config/gh/: hosts.yml
.config/ghostty/: config
.config/herdr/: config.toml
.config/mise/: config.toml
.config/omf/: bundle
.cursor/: setting.json
.ghostty/: config
.hyper_plugins/: package-lock.json  package.json
.ssh/: init.sh
.windsurf/: argv.json
scripts/: bun-install-global.sh  copy-dot-mcp-json.sh  create-symlinks.sh  optimize-spotlight.sh  setup-mac.sh  tmux-three-panes.sh
tools/claudex-agent-adapter/: Cargo.toml  README.md  rust-toolchain.toml
tools/claudex-agent-adapter/.cargo/: config.toml
tools/claudex-agent-adapter/src/: agent_backend.rs  agent_backend_tests.rs  anthropic.rs  app_server.rs  app_server_tests.rs  build_support.rs  copilot_acp.rs  coverage_gate.rs  grok_acp.rs  launcher.rs  launcher_tests.rs  lib.rs  main.rs  provider_config.rs  runtime.rs  runtime_tests.rs
tools/claudex-agent-adapter/src/agent_backend/: routes.rs  routes_tests.rs
tools/claudex-agent-adapter/src/anthropic/: agent_effort.rs  agent_effort_tests.rs  agent_routing.rs  content.rs  content_tests.rs  retention.rs  session.rs  session_tests.rs  stream.rs  stream_batch.rs  subscription.rs  subscription_frames.rs  subscription_request.rs  subscription_stream.rs  subscription_stream_tests.rs  subscription_tests.rs  team_protocol.rs  tests.rs  turn_input.rs  turn_input_tests.rs
tools/claudex-agent-adapter/src/anthropic/session/: tools.rs
tools/claudex-agent-adapter/src/anthropic/stream/: builder.rs  disconnect.rs  protocol.rs  provider_tool.rs  provider_tool_tests.rs  tests.rs  thinking.rs
tools/claudex-agent-adapter/src/app_server/: events.rs  pending.rs
tools/claudex-agent-adapter/src/app_server/events/: tests.rs
tools/claudex-agent-adapter/src/coverage_gate/: report.rs
tools/claudex-agent-adapter/src/grok_acp/: client.rs  connection.rs  plugin.rs  prompt.rs  tests.rs  turns.rs  updates.rs
tools/claudex-agent-adapter/src/grok_acp/plugin/: tests.rs
tools/claudex-agent-adapter/src/grok_acp/turns/: cancellation.rs  cancellation_tests.rs  execute.rs  execute_tests.rs
tools/claudex-agent-adapter/src/grok_acp/updates/: mod.rs  tests.rs  tools.rs  tools_tests.rs
tools/claudex-agent-adapter/src/launcher/: daemon_process.rs
tools/claudex-agent-adapter/tests/: agent_effort.rs  app_server_exit.rs  app_server_failures.rs  backend_routing.rs  build_support.rs  configured_acp.rs  copilot_acp.rs  fish_launcher.rs  grok_acp.rs  http_bridge.rs  launcher.rs  lazy_backend_entrypoints.rs  model_literal_policy.rs  named_team.rs  runtime.rs  session_capacity.rs
tools/claudex-agent-adapter/tests/fixtures/: codex_mock.rs  coverage_branch.rs  grok_acp_mock.rs  routing_codex_mock.rs
tools/claudex-agent-adapter/tests/support/: mod.rs  project_fixture.rs
(+113 files in other folders)
