[package]
name = "claudex-app-server-adapter"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
autobins = false
default-run = "claudex-app-server-adapter"

[[bin]]
name = "claudex-app-server-adapter"
path = "src/main.rs"

[[bin]]
name = "claude-mock"
path = "tests/fixtures/claude_mock.rs"

[[bin]]
name = "codex-mock"
path = "tests/fixtures/codex_mock.rs"

[[bin]]
name = "coverage-branch"
path = "tests/fixtures/coverage_branch.rs"

[lints.rust]
warnings = "deny"
unexpected_cfgs = { level = "deny", check-cfg = ["cfg(coverage_nightly)"] }

[lints.clippy]
cognitive_complexity = "deny"
dbg_macro = "deny"
excessive_nesting = "deny"
needless_raw_string_hashes = "deny"
needless_collect = "deny"
needless_pass_by_ref_mut = "deny"
redundant_clone = "deny"
todo = "deny"
too_many_lines = "deny"
unimplemented = "deny"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.0"

[profile.dev]
debug = 1
incremental = true

[profile.test]
debug = 1
incremental = true

[profile.release]
opt-level = "z"
panic = "abort"
strip = "symbols"
lto = "thin"
